name:                web-dev-proxy
version:             0.1.0.0
synopsis:            Proxy /api to a Haskell backend and everything else to Elm Reactor
description:         Please see README.md
homepage:            http://github.com/japsu/web-dev-proxy#readme
license:             BSD3
license-file:        LICENSE
author:              Santtu Pajukanta
maintainer:          santtu@pajukanta.fi
copyright:           © 2015 Santtu Pajukanta
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable web-dev-proxy
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, http-reverse-proxy, wai, text, http-conduit, transformers, warp
